--- a/Bootstrap/index.css
+++ b/Bootstrap/index.css
@@ -121,9 +121,9 @@
   --bs-form-invalid-color: #dc3545;
   --bs-form-invalid-border-color: #dc3545;
 }
-body{
+/*body{
   background-color: #cacaca;
-}
+}*/
 h1{
   color: #fff;
 }
@@ -178,4 +178,20 @@ h1{
 .icon i{
   position: absolute;
   color: #70abcf;
+}
+#projets{
+  background-color: #bcbcbc;
+}
+.nav_projets{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 40%;
+  background-color: #fcfcfc;
+  height: 40px;
+  border-radius: 5px;
+}
+.nav_projets a{
+  position: relative;
+  text-decoration: none;
 }
