--- a/Bootstrap/index.css
+++ b/Bootstrap/index.css
@@ -194,4 +194,107 @@ h1{
 .nav_projets a{
   position: relative;
   text-decoration: none;
+  text-align: center;
+  width: 25%;
+  font-size: 1em;
+  color: #70abcf;
+  opacity: 1;
 }
+.nav_projets a:hover{                   /* pour faire le changement de couleur de la navbar au survol */
+  color: #fff;
+  background-color: #70abcf;
+  height: 4vh;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  text-align: center;
+}
+.nav_projets a:hover:after{
+  position: absolute;
+  display: block;
+  content: "";                          /*pour faire la petite flèche*/
+  left: 50%;
+  margin-top: 15px;
+  margin-left: -14px;
+  width: 3px;
+  height: 0;
+  border-style: solid;
+  border-color:  #70abcf transparent;
+  border-width: 10px 10px 0px 10px;
+}
+.album{
+    display: flex;                      /* pour que les images soient alignées */
+    flex-wrap: wrap;                    /* pour que les images soient alignées */
+    justify-content: space-between;     /* pour que les images soient alignées */
+}
+.album figure{
+  width: 300px;
+}
+.album figure img{
+  width: 300px;
+}
+.album figcaption{
+  color: #fff;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(0 0 0 .5);
+  overflow: hidden;
+  height: 0;
+  transition: .5s ease;
+}
+.album figcaption h4{                   /* pour le titre de l'album */
+  position: absolute;
+  top: -1px;
+  left: 10px;
+}
+.album figcaption p{                    /* pour le texte de l'album */
+  margin-left: 10px;
+  margin-top: 30px;
+  font-size: 0.9em;
+}
+.album figure:hover figcaption{
+  height: 30%;
+  max-width: 100%;
+  margin-bottom: 0;
+  overflow: visible;
+}
+.fa-eye{
+  position: absolute;
+  top: -25px;
+  right: 26px;
+  font-size: 20px;
+  padding: 14px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  background-color: #70abcf;
+  z-index: 5;
+}
+#contact{
+  position: relative;
+}
+iframe{
+  width: 100%;
+  position: absolute;
+  z-index: 2;
+  margin: 0 auto;
+}
+.filtre{
+  position: relative;
+  width: 100%;
+  z-index: 2;
+  background-color: rgba(25, 25, 253, 0.164);
+}
+form {
+    position: relative;
+    max-width: 300px;
+    left: 45%;
+    z-index: 2;
+    opacity: 0.9;
+    background-color: #fff;
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    gap: 8px;
+    }
